v1.12.2b

 Bugfix:
  - Replaced Singapore's local_building_slots_factor with global_building_slots_factor allowing for the idea bonus to give a bonus

 Balance:
  - The Post-Crisis Fiscal Decisions event now makes the Labour Union unhappy instead of happy

v1.12.2a

 AI:
  - If Estonia has a wargoal and they're less than on-par strength to Russia they won't declare war on Russia
  - Estonia should try to actively pursue more relations with Latvia and Lithuania, vice-versa
  - Increased the desire for nations with lots of nuclear reactors to try and build additional enrichment facilities

 Bugfix:
  - Fixed broken drop downs in the air UI menus for change day night, aggressiveness showing blank menus instead of the correct options
  - Fixed a crash due to a missing button for legacy faction menus
  - Fixed missing frames around officer corps leader
  - Added different effects to "Expanding The Public Sector" Focus of Germany to prevent no effects given
  - Fixed some triggers for news events for NATO
  - Reduced cost of taking Chechen states for Russia
  - Fixed the LAR operation "Steal Naval Blueprint" consuming a civilian token instead of a naval token
  - Removed a Man the Guns check in the game rules for "Take over Faction"
  - Fixed the internal faction "Industrial Conglomerates" not properly initializing when switched during the game

 Balance:
  - Dramatically increased the base Energy Production so the Lack of Power modifier should not appear
  - Reduced the vanilla energy consumption mechanic closer to 0 to help with Lack of Power sometimes appearing in game
  - Reduced the amount of ROI you can get via the focus tree for Sweden. Damn Swedes and their savvy investments

 Content:
  - Added a new diplomatic action "Negotiate Operative Release" allowing you to pay some money and political power for the release of a captive operative