@@ -1018,22 +1018,6 @@ rule_syria_arab_spring_choice = {
 	}
 }
 
-rule_allow_changing_legacy_doctrines = {
-	name = "RULE_ALLOW_CHANGING_LEGACY_DOCTRINES"
-	group = "MD_RULES"
-	icon = "GFX_production_licenses"
-	option = {
-		name = yes
-		text = "RULE_OPTION_YES"
-		desc = "RULE_YES_ALLOW_CHANGING_LEGACY_DOCTRINES_DESC"
-	}
-	default = {
-		name = no
-		text = "RULE_OPTION_NO"
-		desc = "RULE_NO_ALLOW_CHANGING_LEGACY_DOCTRINES_DESC"
-	}
-}
-
 rule_disable_muslim_brotherhood_civil_war = {
 	name = "RULE_DISABLE_MUSLIM_BROTHERHOOD_CIVIL_WAR"
 	group = "MD_RULES"
