@@ -27,18 +27,6 @@ technologies = {
  		}
  	}
  	combined_arms = {
- 		allow = {
- 			if = {
- 				limit = {
- 					has_game_rule = {
- 						rule = rule_allow_changing_legacy_doctrines
- 						option = no
- 					}
- 				}
- 				always = no
- 			}
- 		}
-
  		on_research_complete = {
  			add_to_variable = { army_doctrines_researched = 1 }
  			log = "[GetDateText]: [Root.GetName]: add tech combined_arms"
@@ -86,18 +74,6 @@ technologies = {
  		}
  	}
  	armoured_mass_assault = {
- 		allow = {
- 			if = {
- 				limit = {
- 					has_game_rule = {
- 						rule = rule_allow_changing_legacy_doctrines
- 						option = no
- 					}
- 				}
- 				always = no
- 			}
- 		}
-
  		on_research_complete = {
  			add_to_variable = { army_doctrines_researched = 1 }
  			log = "[GetDateText]: [Root.GetName]: add tech armoured_mass_assault"
@@ -149,18 +125,6 @@ technologies = {
  		}
  	}
  	superior_firepower = {
- 		allow = {
- 			if = {
- 				limit = {
- 					has_game_rule = {
- 						rule = rule_allow_changing_legacy_doctrines
- 						option = no
- 					}
- 				}
- 				always = no
- 			}
- 		}
-
  		on_research_complete = {
  			add_to_variable = { army_doctrines_researched = 1 }
  			log = "[GetDateText]: [Root.GetName]: add tech superior_firepower"
@@ -201,18 +165,6 @@ technologies = {
  		}
  	}
  	infantry_mass_assault = {
- 		allow = {
- 			if = {
- 				limit = {
- 					has_game_rule = {
- 						rule = rule_allow_changing_legacy_doctrines
- 						option = no
- 					}
- 				}
- 				always = no
- 			}
- 		}
-
  		on_research_complete = {
  			add_to_variable = { army_doctrines_researched = 1 }
  			log = "[GetDateText]: [Root.GetName]: add tech infantry_mass_assault"
@@ -251,18 +203,6 @@ technologies = {
  		}
  	}
  	early_guerilla_warfare = {
- 		allow = {
- 			if = {
- 				limit = {
- 					has_game_rule = {
- 						rule = rule_allow_changing_legacy_doctrines
- 						option = no
- 					}
- 				}
- 				always = no
- 			}
- 		}
-
  		on_research_complete = {
  			add_to_variable = { army_doctrines_researched = 1 }
  			log = "[GetDateText]: [Root.GetName]: add tech infantry_mass_assault"
