@@ -836,11 +836,6 @@
  RULE_SYRIA_ARAB_SPRING_CHOICE_HISTORICAL_ISIS_SPAWN: "Spawn Of ISIS"
  RULE_SYRIA_ARAB_SPRING_CHOICE_HISTORICAL_ISIS_SPAWN_DESC: "Syria will always take the choices during the Arab Spring to guarantee the historical Islamic State (ISIS) spawn. This also guarantees the historical civil war will occur."
 
- # Legacy Doctrines
- RULE_ALLOW_CHANGING_LEGACY_DOCTRINES: "Allow Changing Legacy Land Doctrines"
- RULE_YES_ALLOW_CHANGING_LEGACY_DOCTRINES_DESC: "You can change your legacy land doctrines."
- RULE_NO_ALLOW_CHANGING_LEGACY_DOCTRINES_DESC: "You cannot change your legacy land doctrines. This is the default option."
-
  # Muslim Brotherhood Civil War
  RULE_DISABLE_MUSLIM_BROTHERHOOD_CIVIL_WAR: "Disable Muslim Brotherhood Civil War"
  RULE_YES_DISABLE_MUSLIM_BROTHERHOOD_CIVIL_WAR_DESC: "The Muslim Brotherhood Civil War will be disabled."
