@@ -6,6 +6,9 @@ v1.12.2b
  Balance:
   - The Post-Crisis Fiscal Decisions event now makes the Labour Union unhappy instead of happy
 
+ Game Rules:
+  - Removed the "Change Legacy Doctrines" game rules since they no longer exist in the traditional manner
+
 v1.12.2a
 
  AI:
